# itmo-fp-lab-1

./: .gitignore  .ocamlformat  dune-project  lab1.opam
.github/workflows/: workflow.yml
lib/task21/: dune  for.ml  map.ml  module.ml  rec.ml  tailrec.ml
lib/task9/: baseline.py  for.ml  inf.ml  map.ml  module.ml  tailrec.ml
test/: dune  test21.ml  test9.ml  tests.ml  utils.ml
