(lang dune 3.16)

(name lab1)

(generate_opam_files true)

(source
 (github BardinPetr/itmo-fp-lab-1))

(authors "Bardin Petr")

(license MIT)

(package
 (name lab1)
 (synopsis "ITMO FP course laboratory work #1")
 (description "Solutions for Euler project tasks 9 and 21 in OCaml")
 (depends ocaml dune))

